--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.2.0",
     "@react-pdf/renderer": "^4.3.0",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
