--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.1.0",
     "@google/genai": "^1.2.0",
     "bcryptjs": "^2.4.3",
-    "@react-pdf/renderer": "^4.3.0"
+    "@react-pdf/renderer": "^4.3.0",
+        "@vercel/analytics": "^1.0.0"
+
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
